--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ httpx>=0.26.0
 pillow>=10.2.0
 geoalchemy2>=0.14.0
 pygeohash>=1.2.0
-google-generativeai>=0.4.0
-langchain>=0.1.0
-langchain-google-genai>=0.0.11
-langgraph>=0.0.20
+google-generativeai>=0.8.0
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-google-genai>=2.0.0
+langgraph>=0.2.0
 stripe>=8.0.0
