--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,14 @@ dependencies = [
     "pillow>=10.2.0",
     "geoalchemy2>=0.14.0",
     "pygeohash>=1.2.0",
-    "google-generativeai>=0.4.0",
-    "langchain>=0.1.0",
-    "langchain-google-genai>=0.0.11",
-    "langgraph>=0.0.20",
+    "google-generativeai>=0.8.0",
+    "langchain>=0.3.0",
+    "langchain-google-genai>=2.0.0",
+    "langgraph>=0.2.0",
     "stripe>=14.0.0",
     "qrcode>=7.4.0",
-    "firebase-admin>=6.0.0"
+    "firebase-admin>=6.0.0",
+    "langchain-core>=0.3.0",
 ]
 
 [build-system]
