--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,11 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "python-dotenv>=1.0.0",
     "python-jose[cryptography]>=3.3.0",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib[argon2,bcrypt]>=1.7.4",
     "python-multipart>=0.0.6",
     "httpx>=0.26.0",
     "pillow>=10.2.0",
-    "geoalchemy2>=0.14.0",
+    "geoalchemy2[shapely]>=0.14.0",
     "pygeohash>=1.2.0",
     "google-generativeai>=0.8.0",
     "langchain>=0.3.0",
