--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pydantic>=2.5.0
 pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
+passlib[argon2]>=1.7.4
 python-multipart>=0.0.6
 httpx>=0.26.0
 pillow>=10.2.0
