--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ dependencies = [
     "joblib>=1.3.0",
     "numpy>=1.24.0",
     "pandas>=2.0.0",
+    "torch>=2.9.1",
+    "transformers>=4.57.3",
+    "tensorflow>=2.20.0",
+    "aiohttp>=3.13.2",
+    "google-cloud-vision>=3.11.0",
 ]
 
 [build-system]
